  * rxrpc: Avoid ABI change in 4.14.17

  [ Ben Hutchings ]
  * bpf: Avoid ABI change in 4.14.14
  * usbip: Reduce USBIP_VHCI_HC_PORTS to 15, the maximum allowed for SuperSpeed
    hubs (Closes: #878866)
  * [x86] Add versioned build-dependency on gcc-7 for retpoline support
  * [x86] linux-compiler-gcc-7-x86: Add versioned dependency on gcc-7 for
    retpoline support

  [ Riku Voipio ]
  * [arm64] build in reset drivers

 -- Salvatore Bonaccorso <carnil@debian.org>  Tue, 16 Jan 2018 20:50:23 +0100

linux (4.14.13-1) unstable; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v4.x/ChangeLog-4.14.13
    - [x86] mm: Set MODULES_END to 0xffffffffff000000
    - [x86] mm: Map cpu_entry_area at the same place on 4/5 level
    - [x86] kaslr: Fix the vaddr_end mess
    - [x86] events/intel/ds: Use the proper cache flush method for mapping ds
      buffers
    - [x86] alternatives: Add missing '\n' at end of ALTERNATIVE inline asm
    - [x86] pti: Rename BUG_CPU_INSECURE to BUG_CPU_MELTDOWN
    - kernel/acct.c: fix the acct->needcheck check in check_free_space()
    - mm/mprotect: add a cond_resched() inside change_pmd_range()
    - mm/sparse.c: wrong allocation for mem_section
    - userfaultfd: clear the vma->vm_userfaultfd_ctx if UFFD_EVENT_FORK fails
    - btrfs: fix refcount_t usage when deleting btrfs_delayed_nodes
    - efi/capsule-loader: Reinstate virtual capsule mapping
    - [sparc*] crypto: n2 - cure use after free
    - crypto: chacha20poly1305 - validate the digest size
    - crypto: pcrypt - fix freeing pcrypt instances
    - crypto: chelsio - select CRYPTO_GF128MUL
    - [x86] drm/i915: Disable DC states around GMBUS on GLK
    - [x86] drm/i915: Apply Display WA #1183 on skl, kbl, and cfl
    - fscache: Fix the default for fscache_maybe_release_page()
    - [x86] CPU: Avoid unnecessary IPIs in arch_freq_get_on_cpu()
    - [x86] CPU: Always show current CPU frequency in /proc/cpuinfo