@@ -4,8 +4,8 @@ Depends: gcc-7, ${misc:Depends}
 Architecture: armel armhf
 Multi-Arch: foreign
 Description: Compiler for Linux on ARM (meta-package)
- This package depends on gcc 6 of the appropriate architecture for
- Linux on armel and armhf.
+ This package depends on GCC of the appropriate version and architecture
+ for Linux on armel and armhf.
 
 Package: linux-compiler-gcc-7-s390
 Build-Profiles: <!stage1>
@@ -13,8 +13,8 @@ Depends: gcc-7, ${misc:Depends}
 Architecture: s390 s390x
 Multi-Arch: foreign
 Description: Compiler for Linux on IBM zSeries (meta-package)
- This package depends on gcc 6 of the appropriate architecture for
- Linux on s390 and s390x.
+ This package depends on GCC of the appropriate version and architecture
+ for Linux on s390 and s390x.
 
 Package: linux-compiler-gcc-7-x86
 Build-Profiles: <!stage1>
@@ -22,5 +22,5 @@ Depends: gcc-7 (>= 7.2.0-20~), ${misc:Depends}
 Architecture: amd64 i386 x32
 Multi-Arch: foreign
 Description: Compiler for Linux on x86 (meta-package)
- This package depends on gcc 6 of the appropriate architecture for
- Linux on amd64, i386 and x32.
+ This package depends on GCC of the appropriate version and architecture
+ for Linux on amd64, i386 and x32.
