@@ -433,6 +433,8 @@ linux (4.14.17-1) UNRELEASED; urgency=medium
   * [x86] Add versioned build-dependency on gcc-7 for retpoline support
   * [x86] linux-compiler-gcc-7-x86: Add versioned dependency on gcc-7 for
     retpoline support
+  * linux-compiler-gcc-7-{arm,s390,x86}: Remove specific (and wrong) compiler
+    version from description (Closes: #883363)
 
   [ Riku Voipio ]
   * [arm64] build in reset drivers
